homework2/hw2/y.output
   0  $accept : program $end

   1  program :

   2  $$1 :

   3  program : declaration $$1 ';' program

   4  $$2 :

   5  program : assignment $$2 ';' program

   6  $$3 :

   7  program : function '{' inner_statement '}' $$3 program
   8          | statement program

   9  statement : if_else
  10            | for
  11            | while
  12            | switch

  13  if_else : KEY_IF '(' expression ')' '{' inner_statement '}' else_if
  14          | KEY_IF '(' expression ')' singleLineStatement else_if

  15  else_if : KEY_ELSE KEY_IF '(' expression ')' '{' inner_statement '}' else_if
  16          | KEY_ELSE '{' inner_statement '}'
  17          | KEY_ELSE KEY_IF '(' expression ')' singleLineStatement else_if
  18          | KEY_ELSE singleLineStatement
  19          |

  20  for : KEY_FOR '(' forExpression ';' forExpression ';' forExpression ')' '{' inner_statement '}'

  21  forExpression : expressions
  22                |

  23  while : KEY_WHILE '(' expression ')' '{' inner_statement '}'
  24        | KEY_DO '{' inner_statement '}' KEY_WHILE '(' expression ')' ';'
  25        | KEY_WHILE '(' expression ')' singleLineStatement

  26  switch : KEY_SWITCH '(' ID ')' '{' cases defaultCase '}'
  27         | KEY_SWITCH '(' ID ')' '{' cases '}'

  28  cases : KEY_CASE constant ':' inner_statement
  29        | KEY_CASE constant ':' inner_statement cases

  30  defaultCase : KEY_DEFAULT ':' inner_statement

  31  constant : CONSTANT
  32           | INTEGER
  33           | DOUBLE
  34           | SCI
  35           | CHAR

  36  inner_statement : localDeclaration
  37                  | localDeclaration functionImplementation

  38  singleLineStatement : assignment ';'

  39  localDeclaration : declareLocally
  40                   | declareLocally ';' localDeclaration
  41                   |

  42  functionImplementation : functionCode
  43                         | functionCode functionImplementation

  44  functionCode : assignment ';'
  45               | statement

  46  declareLocally : TYPE identifiers
  47                 | KEY_CONST TYPE const_identifiers

  48  index : '[' expression ']'
  49        | '[' expression ']' index

  50  declaration : TYPE identifiers
  51              | KEY_CONST TYPE const_identifiers
  52              | function

  53  function : TYPE ID '(' ')'
  54           | TYPE_VOID ID '(' ')'
  55           | TYPE ID '(' parameters ')'
  56           | TYPE_VOID ID '(' parameters ')'

  57  parameters : TYPE ID index ',' parameters
  58             | TYPE ID ',' parameters
  59             | TYPE ID index
  60             | TYPE ID

  61  identifiers : identifier
  62              | identifier ',' identifiers

  63  identifier : ID
  64             | ID '=' expression
  65             | ID index
  66             | ID index '=' '{' expressions '}'
  67             | ID index '=' '{' '}'

  68  const_identifiers : ID '=' expression
  69                    | ID '=' expression ',' const_identifiers

  70  const_identifier : ID '=' expression

  71  assignment : ID '=' expression
  72             | ID index '=' expression
  73             | ID '(' expressions ')'
  74             | ID '(' ')'
  75             | KEY_BREAK
  76             | KEY_CONTINUE
  77             | KEY_RETURN expression
  78             | ID OPER_PLUS_PLUS
  79             | ID OPER_MINUS_MINUS

  80  expressions : expression
  81              | expression ',' expressions

  82  expression : '!' expression
  83             | expression OPER_OR expression
  84             | expression OPER_AND expression
  85             | expression OPER_CMP expression
  86             | expression '+' expression
  87             | expression '-' expression
  88             | expression '*' expression
  89             | expression '/' expression
  90             | expression '%' expression
  91             | ID OPER_PLUS_PLUS
  92             | ID OPER_MINUS_MINUS
  93             | INTEGER
  94             | DOUBLE
  95             | SCI
  96             | CHAR
  97             | ID
  98             | STRING
  99             | CONSTANT
 100             | ID index
 101             | '-' expression
 102             | '(' expression ')'
 103             | ID '(' expressions ')'
 104             | ID '(' ')'

state 0
	$accept : . program $end  (0)
	program : .  (1)

	TYPE  shift 1
	TYPE_VOID  shift 2
	KEY_FOR  shift 3
	KEY_WHILE  shift 4
	KEY_DO  shift 5
	KEY_IF  shift 6
	KEY_SWITCH  shift 7
	KEY_RETURN  shift 8
	KEY_BREAK  shift 9
	KEY_CONTINUE  shift 10
	KEY_CONST  shift 11
	ID  shift 12
	$end  reduce 1

	program  goto 13
	declaration  goto 14
	assignment  goto 15
	function  goto 16
	statement  goto 17
	if_else  goto 18
	for  goto 19
	while  goto 20
	switch  goto 21


state 1
	declaration : TYPE . identifiers  (50)
	function : TYPE . ID '(' ')'  (53)
	function : TYPE . ID '(' parameters ')'  (55)

	ID  shift 22
	.  error

	identifiers  goto 23
	identifier  goto 24


state 2
	function : TYPE_VOID . ID '(' ')'  (54)
	function : TYPE_VOID . ID '(' parameters ')'  (56)

	ID  shift 25
	.  error


state 3
	for : KEY_FOR . '(' forExpression ';' forExpression ';' forExpression ')' '{' inner_statement '}'  (20)

	'('  shift 26
	.  error


state 4
	while : KEY_WHILE . '(' expression ')' '{' inner_statement '}'  (23)
	while : KEY_WHILE . '(' expression ')' singleLineStatement  (25)

	'('  shift 27
	.  error


state 5
	while : KEY_DO . '{' inner_statement '}' KEY_WHILE '(' expression ')' ';'  (24)

	'{'  shift 28
	.  error


state 6
	if_else : KEY_IF . '(' expression ')' '{' inner_statement '}' else_if  (13)
	if_else : KEY_IF . '(' expression ')' singleLineStatement else_if  (14)

	'('  shift 29
	.  error


state 7
	switch : KEY_SWITCH . '(' ID ')' '{' cases defaultCase '}'  (26)
	switch : KEY_SWITCH . '(' ID ')' '{' cases '}'  (27)

	'('  shift 30
	.  error


state 8
	assignment : KEY_RETURN . expression  (77)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 41


state 9
	assignment : KEY_BREAK .  (75)

	.  reduce 75


state 10
	assignment : KEY_CONTINUE .  (76)

	.  reduce 76


state 11
	declaration : KEY_CONST . TYPE const_identifiers  (51)

	TYPE  shift 42
	.  error


state 12
	assignment : ID . '=' expression  (71)
	assignment : ID . index '=' expression  (72)
	assignment : ID . '(' expressions ')'  (73)
	assignment : ID . '(' ')'  (74)
	assignment : ID . OPER_PLUS_PLUS  (78)
	assignment : ID . OPER_MINUS_MINUS  (79)

	OPER_PLUS_PLUS  shift 43
	OPER_MINUS_MINUS  shift 44
	'['  shift 45
	'('  shift 46
	'='  shift 47
	.  error

	index  goto 48


state 13
	$accept : program . $end  (0)

	$end  accept


state 14
	program : declaration . $$1 ';' program  (3)
	$$1 : .  (2)

	.  reduce 2

	$$1  goto 49


state 15
	program : assignment . $$2 ';' program  (5)
	$$2 : .  (4)

	.  reduce 4

	$$2  goto 50


state 16
	program : function . '{' inner_statement '}' $$3 program  (7)
	declaration : function .  (52)

	'{'  shift 51
	';'  reduce 52


state 17
	program : statement . program  (8)
	program : .  (1)

	TYPE  shift 1
	TYPE_VOID  shift 2
	KEY_FOR  shift 3
	KEY_WHILE  shift 4
	KEY_DO  shift 5
	KEY_IF  shift 6
	KEY_SWITCH  shift 7
	KEY_RETURN  shift 8
	KEY_BREAK  shift 9
	KEY_CONTINUE  shift 10
	KEY_CONST  shift 11
	ID  shift 12
	$end  reduce 1

	program  goto 52
	declaration  goto 14
	assignment  goto 15
	function  goto 16
	statement  goto 17
	if_else  goto 18
	for  goto 19
	while  goto 20
	switch  goto 21


state 18
	statement : if_else .  (9)

	.  reduce 9


state 19
	statement : for .  (10)

	.  reduce 10


state 20
	statement : while .  (11)

	.  reduce 11


state 21
	statement : switch .  (12)

	.  reduce 12


state 22
	function : TYPE ID . '(' ')'  (53)
	function : TYPE ID . '(' parameters ')'  (55)
	identifier : ID .  (63)
	identifier : ID . '=' expression  (64)
	identifier : ID . index  (65)
	identifier : ID . index '=' '{' expressions '}'  (66)
	identifier : ID . index '=' '{' '}'  (67)

	'['  shift 45
	'('  shift 53
	'='  shift 54
	';'  reduce 63
	','  reduce 63

	index  goto 55


state 23
	declaration : TYPE identifiers .  (50)

	.  reduce 50


state 24
	identifiers : identifier .  (61)
	identifiers : identifier . ',' identifiers  (62)

	','  shift 56
	KEY_FOR  reduce 61
	KEY_WHILE  reduce 61
	KEY_DO  reduce 61
	KEY_IF  reduce 61
	KEY_SWITCH  reduce 61
	KEY_RETURN  reduce 61
	KEY_BREAK  reduce 61
	KEY_CONTINUE  reduce 61
	KEY_CASE  reduce 61
	KEY_DEFAULT  reduce 61
	ID  reduce 61
	';'  reduce 61
	'}'  reduce 61


state 25
	function : TYPE_VOID ID . '(' ')'  (54)
	function : TYPE_VOID ID . '(' parameters ')'  (56)

	'('  shift 57
	.  error


state 26
	for : KEY_FOR '(' . forExpression ';' forExpression ';' forExpression ')' '{' inner_statement '}'  (20)
	forExpression : .  (22)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	';'  reduce 22

	expression  goto 58
	forExpression  goto 59
	expressions  goto 60


state 27
	while : KEY_WHILE '(' . expression ')' '{' inner_statement '}'  (23)
	while : KEY_WHILE '(' . expression ')' singleLineStatement  (25)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 61


state 28
	while : KEY_DO '{' . inner_statement '}' KEY_WHILE '(' expression ')' ';'  (24)
	localDeclaration : .  (41)

	TYPE  shift 62
	KEY_CONST  shift 63
	KEY_FOR  reduce 41
	KEY_WHILE  reduce 41
	KEY_DO  reduce 41
	KEY_IF  reduce 41
	KEY_SWITCH  reduce 41
	KEY_RETURN  reduce 41
	KEY_BREAK  reduce 41
	KEY_CONTINUE  reduce 41
	ID  reduce 41
	'}'  reduce 41

	inner_statement  goto 64
	localDeclaration  goto 65
	declareLocally  goto 66


state 29
	if_else : KEY_IF '(' . expression ')' '{' inner_statement '}' else_if  (13)
	if_else : KEY_IF '(' . expression ')' singleLineStatement else_if  (14)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 67


state 30
	switch : KEY_SWITCH '(' . ID ')' '{' cases defaultCase '}'  (26)
	switch : KEY_SWITCH '(' . ID ')' '{' cases '}'  (27)

	ID  shift 68
	.  error


state 31
	expression : INTEGER .  (93)

	.  reduce 93


state 32
	expression : STRING .  (98)

	.  reduce 98


state 33
	expression : DOUBLE .  (94)

	.  reduce 94


state 34
	expression : SCI .  (95)

	.  reduce 95


state 35
	expression : CHAR .  (96)

	.  reduce 96


state 36
	expression : CONSTANT .  (99)

	.  reduce 99


state 37
	expression : ID . OPER_PLUS_PLUS  (91)
	expression : ID . OPER_MINUS_MINUS  (92)
	expression : ID .  (97)
	expression : ID . index  (100)
	expression : ID . '(' expressions ')'  (103)
	expression : ID . '(' ')'  (104)

	OPER_PLUS_PLUS  shift 69
	OPER_MINUS_MINUS  shift 70
	'['  shift 45
	'('  shift 71
	KEY_FOR  reduce 97
	KEY_WHILE  reduce 97
	KEY_DO  reduce 97
	KEY_IF  reduce 97
	KEY_SWITCH  reduce 97
	KEY_RETURN  reduce 97
	KEY_BREAK  reduce 97
	KEY_CONTINUE  reduce 97
	KEY_CASE  reduce 97
	KEY_DEFAULT  reduce 97
	ID  reduce 97
	OPER_CMP  reduce 97
	OPER_AND  reduce 97
	OPER_OR  reduce 97
	'+'  reduce 97
	'-'  reduce 97
	'*'  reduce 97
	'/'  reduce 97
	'%'  reduce 97
	']'  reduce 97
	';'  reduce 97
	'}'  reduce 97
	')'  reduce 97
	','  reduce 97

	index  goto 72


state 38
	expression : '!' . expression  (82)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 73


state 39
	expression : '-' . expression  (101)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 74


state 40
	expression : '(' . expression ')'  (102)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 75


state 41
	assignment : KEY_RETURN expression .  (77)
	expression : expression . OPER_OR expression  (83)
	expression : expression . OPER_AND expression  (84)
	expression : expression . OPER_CMP expression  (85)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . '/' expression  (89)
	expression : expression . '%' expression  (90)

	OPER_CMP  shift 76
	OPER_AND  shift 77
	OPER_OR  shift 78
	'+'  shift 79
	'-'  shift 80
	'*'  shift 81
	'/'  shift 82
	'%'  shift 83
	';'  reduce 77


state 42
	declaration : KEY_CONST TYPE . const_identifiers  (51)

	ID  shift 84
	.  error

	const_identifiers  goto 85


state 43
	assignment : ID OPER_PLUS_PLUS .  (78)

	.  reduce 78


state 44
	assignment : ID OPER_MINUS_MINUS .  (79)

	.  reduce 79


state 45
	index : '[' . expression ']'  (48)
	index : '[' . expression ']' index  (49)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 86


state 46
	assignment : ID '(' . expressions ')'  (73)
	assignment : ID '(' . ')'  (74)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	')'  shift 87
	.  error

	expression  goto 58
	expressions  goto 88


state 47
	assignment : ID '=' . expression  (71)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 89


state 48
	assignment : ID index . '=' expression  (72)

	'='  shift 90
	.  error


state 49
	program : declaration $$1 . ';' program  (3)

	';'  shift 91
	.  error


state 50
	program : assignment $$2 . ';' program  (5)

	';'  shift 92
	.  error


state 51
	program : function '{' . inner_statement '}' $$3 program  (7)
	localDeclaration : .  (41)

	TYPE  shift 62
	KEY_CONST  shift 63
	KEY_FOR  reduce 41
	KEY_WHILE  reduce 41
	KEY_DO  reduce 41
	KEY_IF  reduce 41
	KEY_SWITCH  reduce 41
	KEY_RETURN  reduce 41
	KEY_BREAK  reduce 41
	KEY_CONTINUE  reduce 41
	ID  reduce 41
	'}'  reduce 41

	inner_statement  goto 93
	localDeclaration  goto 65
	declareLocally  goto 66


state 52
	program : statement program .  (8)

	.  reduce 8


state 53
	function : TYPE ID '(' . ')'  (53)
	function : TYPE ID '(' . parameters ')'  (55)

	TYPE  shift 94
	')'  shift 95
	.  error

	parameters  goto 96


state 54
	identifier : ID '=' . expression  (64)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 97


state 55
	identifier : ID index .  (65)
	identifier : ID index . '=' '{' expressions '}'  (66)
	identifier : ID index . '=' '{' '}'  (67)

	'='  shift 98
	KEY_FOR  reduce 65
	KEY_WHILE  reduce 65
	KEY_DO  reduce 65
	KEY_IF  reduce 65
	KEY_SWITCH  reduce 65
	KEY_RETURN  reduce 65
	KEY_BREAK  reduce 65
	KEY_CONTINUE  reduce 65
	KEY_CASE  reduce 65
	KEY_DEFAULT  reduce 65
	ID  reduce 65
	';'  reduce 65
	'}'  reduce 65
	','  reduce 65


state 56
	identifiers : identifier ',' . identifiers  (62)

	ID  shift 99
	.  error

	identifiers  goto 100
	identifier  goto 24


state 57
	function : TYPE_VOID ID '(' . ')'  (54)
	function : TYPE_VOID ID '(' . parameters ')'  (56)

	TYPE  shift 94
	')'  shift 101
	.  error

	parameters  goto 102


state 58
	expressions : expression .  (80)
	expressions : expression . ',' expressions  (81)
	expression : expression . OPER_OR expression  (83)
	expression : expression . OPER_AND expression  (84)
	expression : expression . OPER_CMP expression  (85)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . '/' expression  (89)
	expression : expression . '%' expression  (90)

	OPER_CMP  shift 76
	OPER_AND  shift 77
	OPER_OR  shift 78
	'+'  shift 79
	'-'  shift 80
	'*'  shift 81
	'/'  shift 82
	'%'  shift 83
	','  shift 103
	';'  reduce 80
	'}'  reduce 80
	')'  reduce 80


state 59
	for : KEY_FOR '(' forExpression . ';' forExpression ';' forExpression ')' '{' inner_statement '}'  (20)

	';'  shift 104
	.  error


state 60
	forExpression : expressions .  (21)

	.  reduce 21


state 61
	while : KEY_WHILE '(' expression . ')' '{' inner_statement '}'  (23)
	while : KEY_WHILE '(' expression . ')' singleLineStatement  (25)
	expression : expression . OPER_OR expression  (83)
	expression : expression . OPER_AND expression  (84)
	expression : expression . OPER_CMP expression  (85)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . '/' expression  (89)
	expression : expression . '%' expression  (90)

	OPER_CMP  shift 76
	OPER_AND  shift 77
	OPER_OR  shift 78
	'+'  shift 79
	'-'  shift 80
	'*'  shift 81
	'/'  shift 82
	'%'  shift 83
	')'  shift 105
	.  error


state 62
	declareLocally : TYPE . identifiers  (46)

	ID  shift 99
	.  error

	identifiers  goto 106
	identifier  goto 24


state 63
	declareLocally : KEY_CONST . TYPE const_identifiers  (47)

	TYPE  shift 107
	.  error


state 64
	while : KEY_DO '{' inner_statement . '}' KEY_WHILE '(' expression ')' ';'  (24)

	'}'  shift 108
	.  error


state 65
	inner_statement : localDeclaration .  (36)
	inner_statement : localDeclaration . functionImplementation  (37)

	KEY_FOR  shift 3
	KEY_WHILE  shift 4
	KEY_DO  shift 5
	KEY_IF  shift 6
	KEY_SWITCH  shift 7
	KEY_RETURN  shift 8
	KEY_BREAK  shift 9
	KEY_CONTINUE  shift 10
	ID  shift 12
	KEY_CASE  reduce 36
	KEY_DEFAULT  reduce 36
	'}'  reduce 36

	assignment  goto 109
	statement  goto 110
	if_else  goto 18
	for  goto 19
	while  goto 20
	switch  goto 21
	functionImplementation  goto 111
	functionCode  goto 112


state 66
	localDeclaration : declareLocally .  (39)
	localDeclaration : declareLocally . ';' localDeclaration  (40)

	';'  shift 113
	KEY_FOR  reduce 39
	KEY_WHILE  reduce 39
	KEY_DO  reduce 39
	KEY_IF  reduce 39
	KEY_SWITCH  reduce 39
	KEY_RETURN  reduce 39
	KEY_BREAK  reduce 39
	KEY_CONTINUE  reduce 39
	KEY_CASE  reduce 39
	KEY_DEFAULT  reduce 39
	ID  reduce 39
	'}'  reduce 39


state 67
	if_else : KEY_IF '(' expression . ')' '{' inner_statement '}' else_if  (13)
	if_else : KEY_IF '(' expression . ')' singleLineStatement else_if  (14)
	expression : expression . OPER_OR expression  (83)
	expression : expression . OPER_AND expression  (84)
	expression : expression . OPER_CMP expression  (85)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . '/' expression  (89)
	expression : expression . '%' expression  (90)

	OPER_CMP  shift 76
	OPER_AND  shift 77
	OPER_OR  shift 78
	'+'  shift 79
	'-'  shift 80
	'*'  shift 81
	'/'  shift 82
	'%'  shift 83
	')'  shift 114
	.  error


state 68
	switch : KEY_SWITCH '(' ID . ')' '{' cases defaultCase '}'  (26)
	switch : KEY_SWITCH '(' ID . ')' '{' cases '}'  (27)

	')'  shift 115
	.  error


state 69
	expression : ID OPER_PLUS_PLUS .  (91)

	.  reduce 91


state 70
	expression : ID OPER_MINUS_MINUS .  (92)

	.  reduce 92


state 71
	expression : ID '(' . expressions ')'  (103)
	expression : ID '(' . ')'  (104)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	')'  shift 116
	.  error

	expression  goto 58
	expressions  goto 117


state 72
	expression : ID index .  (100)

	.  reduce 100


state 73
	expression : '!' expression .  (82)
	expression : expression . OPER_OR expression  (83)
	expression : expression . OPER_AND expression  (84)
	expression : expression . OPER_CMP expression  (85)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . '/' expression  (89)
	expression : expression . '%' expression  (90)

	'+'  shift 79
	'-'  shift 80
	'*'  shift 81
	'/'  shift 82
	'%'  shift 83
	KEY_FOR  reduce 82
	KEY_WHILE  reduce 82
	KEY_DO  reduce 82
	KEY_IF  reduce 82
	KEY_SWITCH  reduce 82
	KEY_RETURN  reduce 82
	KEY_BREAK  reduce 82
	KEY_CONTINUE  reduce 82
	KEY_CASE  reduce 82
	KEY_DEFAULT  reduce 82
	ID  reduce 82
	OPER_CMP  reduce 82
	OPER_AND  reduce 82
	OPER_OR  reduce 82
	']'  reduce 82
	';'  reduce 82
	'}'  reduce 82
	')'  reduce 82
	','  reduce 82


state 74
	expression : expression . OPER_OR expression  (83)
	expression : expression . OPER_AND expression  (84)
	expression : expression . OPER_CMP expression  (85)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . '/' expression  (89)
	expression : expression . '%' expression  (90)
	expression : '-' expression .  (101)

	.  reduce 101


state 75
	expression : expression . OPER_OR expression  (83)
	expression : expression . OPER_AND expression  (84)
	expression : expression . OPER_CMP expression  (85)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . '/' expression  (89)
	expression : expression . '%' expression  (90)
	expression : '(' expression . ')'  (102)

	OPER_CMP  shift 76
	OPER_AND  shift 77
	OPER_OR  shift 78
	'+'  shift 79
	'-'  shift 80
	'*'  shift 81
	'/'  shift 82
	'%'  shift 83
	')'  shift 118
	.  error


state 76
	expression : expression OPER_CMP . expression  (85)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 119


state 77
	expression : expression OPER_AND . expression  (84)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 120


state 78
	expression : expression OPER_OR . expression  (83)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 121


state 79
	expression : expression '+' . expression  (86)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 122


state 80
	expression : expression '-' . expression  (87)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 123


state 81
	expression : expression '*' . expression  (88)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 124


state 82
	expression : expression '/' . expression  (89)

	INTEGER  shift 31
	STRING  shift 32
	DOUBLE  shift 33
	SCI  shift 34
	CHAR  shift 35
	CONSTANT  shift 36
	ID  shift 37
	'!'  shift 38
	'-'  shift 39
	'('  shift 40
	.  error

	expression  goto 125


state 83
	expression : expression '%' . expression  (90)
